--- a/config/config.yaml
+++ b/config/config.yaml
@@ -137,7 +137,7 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
-  - id: "xtjj"
-    name: "稀土掘金"
-  - id: "wxtxs"
+  - id: "juejin"
+    name: "掘金"
+  - id: "sputniknewscn"
     name: "卫星通讯社"
