--- a/docker/nginx/docker-compose.yml
+++ b/docker/nginx/docker-compose.yml
@@ -1,7 +1,12 @@
 services:
   mcp-service:
-    image: wantcat/trendradar-mcp:latest
+    build:
+      context: ../../
+      dockerfile: ./docker/nginx/Dockerfile.mcp
     container_name: trend-radar-mcp
+    volumes:
+      - ../config:/app/config:ro
+      - ../output:/app/output:ro
     ports:
       - "127.0.0.1:3333:3333"
     environment:
@@ -10,7 +15,7 @@ services:
       - TZ=Asia/Shanghai
     restart: always
     networks:
-      - mcp-net
+      - mcp-network
 
   # 2. Nginx 代理（对外暴露 80/443 端口，接收远程请求）
   nginx-proxy:
@@ -18,12 +23,14 @@ services:
     container_name: nginx-proxy
     ports:
       - "80:80"
-    volumes:
-      - /data/nginx/conf.d:/etc/nginx/conf.d:ro
     restart: always
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - mcp-service
     networks:
-      - mcp-net
+      - mcp-network
 
 networks:
-  mcp-net:
+  mcp-network:
     driver: bridge
